finalized Switch Clips Fixer

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ PSS File Sorter.log
 # *.mkv
 *.pyc
 fix dir
-Photos
+Photos from gphotos for testing
 switch clips
 temp switch screenshots 1-10-2020
