re-add date taken column

--- a/.gitignore
+++ b/.gitignore
@@ -533,3 +533,6 @@ PSS Photo Sorter/bin/Debug/net5.0/PSS Photo Sorter.pdb
 PSS Photo Sorter/bin/Debug/net5.0/PSS Photo Sorter.exe
 PSS Photo Sorter/bin/Debug/net5.0/PSS Photo Sorter.dll
 *.csprojAssemblyReference.cache
+Actual DB Test/Actual DB Test/bin/
+
+Actual DB Test/Actual DB Test/obj/
