--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,14 @@
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
             // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
-            "name": ".NET Core Launch (console)",
+            "name": "Actual DB Test",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/PSS Photo Sorter/bin/Debug/net5.0/PSS Photo Sorter.dll",
+            "program": "C:/Users/Elliott/Documents/GitHub/Photos-Storage-Server/Actual DB Test/Actual DB Test/bin/Debug/net5.0/Actual DB Test.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/PSS Photo Sorter",
+            "cwd": "${workspaceFolder}/Actual DB Test",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
