Add function to load everything in media table (unless it's in a folder)

--- a/.gitignore
+++ b/.gitignore
@@ -536,3 +536,11 @@ PSS Photo Sorter/bin/Debug/net5.0/PSS Photo Sorter.dll
 Actual DB Test/Actual DB Test/bin/
 
 Actual DB Test/Actual DB Test/obj/
+Actual DB Test/Actual DB Test/bin/Debug/net5.0/ref/Actual DB Test.dll
+Actual DB Test/Actual DB Test/bin/Debug/net5.0/Actual DB Test.pdb
+Actual DB Test/Actual DB Test/bin/Debug/net5.0/Actual DB Test.dll
+Actual DB Test/Actual DB Test/.vs/Actual DB Test/v16/.suo
+Actual DB Test/Actual DB Test/obj/Debug/net5.0/Actual DB Test.csprojAssemblyReference.cache
+Actual DB Test/Actual DB Test/obj/Debug/net5.0/Actual DB Test.dll
+Actual DB Test/Actual DB Test/obj/Debug/net5.0/Actual DB Test.pdb
+Actual DB Test/Actual DB Test/obj/Debug/net5.0/ref/Actual DB Test.dll
