--- a/.gitignore
+++ b/.gitignore
@@ -544,3 +544,10 @@ Actual DB Test/Actual DB Test/obj/Debug/net5.0/Actual DB Test.csprojAssemblyRefe
 Actual DB Test/Actual DB Test/obj/Debug/net5.0/Actual DB Test.dll
 Actual DB Test/Actual DB Test/obj/Debug/net5.0/Actual DB Test.pdb
 Actual DB Test/Actual DB Test/obj/Debug/net5.0/ref/Actual DB Test.dll
+Actual DB Test/Actual DB Test/obj/Debug/net5.0/ref/Actual DB Test.dll
+Actual DB Test/Actual DB Test/obj/Debug/net5.0/Actual DB Test.pdb
+Actual DB Test/Actual DB Test/obj/Debug/net5.0/Actual DB Test.dll
+Actual DB Test/Actual DB Test/bin/Debug/net5.0/ref/Actual DB Test.dll
+Actual DB Test/Actual DB Test/bin/Debug/net5.0/Actual DB Test.pdb
+Actual DB Test/Actual DB Test/bin/Debug/net5.0/Actual DB Test.dll
+Actual DB Test/Actual DB Test/.vs/Actual DB Test/v16/.suo
