--- a/PSS Photo Sorter/PSS Photo Sorter.csproj
+++ b/PSS Photo Sorter/PSS Photo Sorter.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="ExifLib" Version="1.7.0" />
+    <PackageReference Include="MySql.Data" Version="8.0.25" />
   </ItemGroup>
 
 </Project>
