Side panel looks good. Moving onto loading images now I think

--- a/PSS/PSS.csproj
+++ b/PSS/PSS.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\gphotos icon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Shared\" />
   </ItemGroup>
 
