--- a/PSS/Server/PSS.Server.csproj
+++ b/PSS/Server/PSS.Server.csproj
@@ -13,5 +13,9 @@
     <ProjectReference Include="..\Shared\PSS.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 
 </Project>
