--- a/.gitignore
+++ b/.gitignore
@@ -551,3 +551,5 @@ Actual DB Test/Actual DB Test/bin/Debug/net5.0/ref/Actual DB Test.dll
 Actual DB Test/Actual DB Test/bin/Debug/net5.0/Actual DB Test.pdb
 Actual DB Test/Actual DB Test/bin/Debug/net5.0/Actual DB Test.dll
 Actual DB Test/Actual DB Test/.vs/Actual DB Test/v16/.suo
+
+PSS/Client/wwwroot/
