going to start bringing over stuff from OG PSS project

--- a/.gitignore
+++ b/.gitignore
@@ -553,3 +553,5 @@ Actual DB Test/Actual DB Test/bin/Debug/net5.0/Actual DB Test.dll
 Actual DB Test/Actual DB Test/.vs/Actual DB Test/v16/.suo
 
 PSS/Client/wwwroot/
+
+PSS/wwwroot/
