Completely re-organized CSS stuff into multiple files

--- a/.gitignore
+++ b/.gitignore
@@ -552,6 +552,4 @@ Actual DB Test/Actual DB Test/bin/Debug/net5.0/Actual DB Test.pdb
 Actual DB Test/Actual DB Test/bin/Debug/net5.0/Actual DB Test.dll
 Actual DB Test/Actual DB Test/.vs/Actual DB Test/v16/.suo
 
-PSS/Client/wwwroot/
-
-PSS/wwwroot/
+PSS/wwwroot/Pics and Vids/
