--- a/.gitignore
+++ b/.gitignore
@@ -553,3 +553,5 @@ Actual DB Test/Actual DB Test/bin/Debug/net5.0/Actual DB Test.dll
 Actual DB Test/Actual DB Test/.vs/Actual DB Test/v16/.suo
 
 PSS/wwwroot/Pics and Vids/
+
+Pics and Vids/Test Pics/
