--- a/PSS/PSS.csproj
+++ b/PSS/PSS.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MudBlazor" Version="5.1.2" />
     <PackageReference Include="MySql.Data" Version="8.0.26" />
   </ItemGroup>
 
