Squashed commit of the following:
commit 36726ea424c43454df25beefa28c79e2c862b23d
Author: Elliott DuCharme <ellduc4@gmail.com>
Date:   Sun Oct 31 18:44:15 2021 -0500

    Squashed commit of the following:

    commit 94f775cd125986ffb54cc1f4c06ef51c8bd45cbe
    Author: Elliott DuCharme <ellduc4@gmail.com>
    Date:   Sun Oct 31 16:58:04 2021 -0500

        forgot to change this from wwwroot to PSS.Settings.uploadRootPath

    commit 9a4c96fa7a5ea1ee51e7702463d8a3c75ffd9dd7
    Author: Elliott DuCharme <ellduc4@gmail.com>
    Date:   Sun Oct 31 16:34:27 2021 -0500

        remove testing stuff, comments, and get return val from GetTagValue()

    commit 6bd1414a212b98e3967941622eedc8434c63c7ad
    Author: Elliott DuCharme <ellduc4@gmail.com>
    Date:   Sun Oct 31 15:52:51 2021 -0500

        All Metadata functions now return false if no data found and now default to DT.Now

    commit faf29a48acadb547719bc0e3c987db1cbb92b1fa
    Author: Elliott DuCharme <ellduc4@gmail.com>
    Date:   Sun Oct 31 13:43:14 2021 -0500

        albums div now has max height

    commit 1dff0b04a2fc8cb5efbdaf6cf3495af03daadce6
    Author: Elliott DuCharme <ellduc4@gmail.com>
    Date:   Sat Oct 30 23:55:56 2021 -0500

        creating and uploading to albums from UA works?

    commit 94eef58aaf49ed65581a619cdb91b0eced788615
    Author: Elliott DuCharme <ellduc4@gmail.com>
    Date:   Sat Oct 30 23:32:21 2021 -0500

        Added elements to allow creating new albums. Still a lot to do

    commit 414e6ba751117dcb5a495ca64ba99d2354f25fba
    Author: Elliott DuCharme <ellduc4@gmail.com>
    Date:   Sat Oct 30 22:08:49 2021 -0500

        Reduce text

    commit cc109e15505e206fe790b795ddddd3050e9697a8
    Author: Elliott DuCharme <ellduc4@gmail.com>
    Date:   Sat Oct 30 21:38:04 2021 -0500

        rename var and changed button icons

    commit 711e51c0fbda443254420b7dd2c640e4fa35b35e
    Author: Elliott DuCharme <ellduc4@gmail.com>
    Date:   Sat Oct 30 21:27:42 2021 -0500

        f

--- a/.gitignore
+++ b/.gitignore
@@ -555,3 +555,14 @@ Actual DB Test/Actual DB Test/.vs/Actual DB Test/v16/.suo
 PSS/wwwroot/Pics and Vids/
 
 Pics and Vids/Test Pics/
+PSS/pss_settings.json
+
+PSS/wwwroot/pss_media/
+
+PSS/wwwroot/hi/
+
+PSS/wwwroot/pss_upload/
+
+PSS/wwwroot/pss_library/
+
+PSS/wwwroot/pics/
