--- a/PSS/PSS.csproj
+++ b/PSS/PSS.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Npgsql" Version="6.0.0" />
+    <PackageReference Include="Toolbelt.Blazor.HotKeys" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
