--- a/.gitignore
+++ b/.gitignore
@@ -521,3 +521,7 @@ $RECYCLE.BIN/
 _NCrunch*
 
 PSS/PSS/pss_settings.json
+PSS/PSS/wwwroot/pss_backup
+PSS/PSS/wwwroot/pss_library
+PSS/PSS/wwwroot/pss_tmp
+PSS/PSS/wwwroot/pss_upload
