--- a/MemoryMosaic/Properties/launchSettings.json
+++ b/MemoryMosaic/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "PSS": {
+    "MemoryMosaic": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
