Clean up .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -520,8 +520,4 @@ $RECYCLE.BIN/
 
 _NCrunch*
 
-PSS/PSS/pss_settings.json
-PSS/PSS/wwwroot/pss_backup
-PSS/PSS/wwwroot/pss_library
-PSS/PSS/wwwroot/pss_tmp
-PSS/PSS/wwwroot/pss_upload
+MemoryMosaic/mm_settings.json
