Replace all references to PSS with either MM or MemoryMosaic

--- a/MemoryMosaic/MemoryMosaic.csproj
+++ b/MemoryMosaic/MemoryMosaic.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\PSS.js" />
+    <None Include="wwwroot\MM.js" />
   </ItemGroup>
 
 </Project>
