Enable nullable flag in csproj. Lot of stuff will be broken and unstable.

--- a/MemoryMosaic/MemoryMosaic.csproj
+++ b/MemoryMosaic/MemoryMosaic.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>MemoryMosaic</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
