--- a/Initialization/Initialization.csproj
+++ b/Initialization/Initialization.csproj
@@ -1,14 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
-
     <ItemGroup>
-      <ProjectReference Include="..\MemoryMosaic\MemoryMosaic.csproj"/>
+        <PackageReference Include="Npgsql" Version="6.0.2"/>
     </ItemGroup>
-
 </Project>
