Ignore compiler warning BL0005 in MemoryMosaic.csproj

--- a/MemoryMosaic/MemoryMosaic.csproj
+++ b/MemoryMosaic/MemoryMosaic.csproj
@@ -3,6 +3,7 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<RootNamespace>MemoryMosaic</RootNamespace>
 		<Nullable>enable</Nullable>
+		<NoWarn>BL0005</NoWarn> <!-- warning BL0005: Component parameter should not be set outside of its component. -->
 	</PropertyGroup>
 
 	<ItemGroup>
