--- a/MemoryMosaic/MemoryMosaic.csproj
+++ b/MemoryMosaic/MemoryMosaic.csproj
@@ -12,10 +12,11 @@
 		<EmbeddedResource Remove="Server\**"/>
 		<None Remove="Server\**"/>
 
-		<Compile Remove="wwwroot\css\**"/>
-		<EmbeddedResource Remove="wwwroot\css\**"/>
-		<Content Remove="wwwroot\css\**"/>
-		<None Remove="wwwroot\css\**"/>
+		<None Include="wwwroot\MM.js"/>
+		<None Include="wwwroot\VideoPlayer.js"/>
+
+		<None Remove="*.map"/>
+		<Content Remove="wwwroot\css\**\*.map"/>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -24,10 +25,5 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
 		<PackageReference Include="Npgsql" Version="6.0.2"/>
 		<PackageReference Include="Toolbelt.Blazor.HotKeys" Version="12.0.1"/>
-	</ItemGroup>
-
-	<ItemGroup>
-		<None Include="wwwroot\MM.js"/>
-		<None Include="wwwroot\VideoPlayer.js"/>
 	</ItemGroup>
 </Project>
