--- a/MemoryMosaic/MemoryMosaic.csproj
+++ b/MemoryMosaic/MemoryMosaic.csproj
@@ -2,6 +2,7 @@
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
 		<RootNamespace>MemoryMosaic</RootNamespace>
+		<ApplicationIcon>wwwroot/MM Icon.ico</ApplicationIcon>
 		<Nullable>enable</Nullable>
 		<NoWarn>BL0005</NoWarn> <!-- warning BL0005: Component parameter should not be set outside of its component. -->
 	</PropertyGroup>
