Remove sasscompiler.json and appsettings.Development.json on build

--- a/MemoryMosaic/MemoryMosaic.csproj
+++ b/MemoryMosaic/MemoryMosaic.csproj
@@ -18,6 +18,12 @@
 
 		<None Remove="*.map"/>
 		<Content Remove="wwwroot\css\**\*.map"/>
+		
+		<None Remove="sasscompiler.json"/>
+		<Content Remove="sasscompiler.json"/>
+
+		<None Remove="appsettings.Development.json"/>
+		<Content Remove="appsettings.Development.json"/>
 	</ItemGroup>
 
 	<ItemGroup>
