--- a/MemoryMosaic/Properties/launchSettings.json
+++ b/MemoryMosaic/Properties/launchSettings.json
@@ -3,8 +3,10 @@
     "MemoryMosaic": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001",
+      "launchBrowser": false,
+      "hotReloadEnabled": true,
+      "use64Bit": true,
+      "applicationUrl": "https://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
